fixed padding on small screens and min width

--- a/og-pokemon/src/app/app.component.scss
+++ b/og-pokemon/src/app/app.component.scss
@@ -3,5 +3,5 @@ hr {
 }
 
 .pokemon-card {
-	min-width: 350px;
+	min-width: 300px;
 }
